force-app/main/default/objects/Account/fields/Account_Mail__c.field-meta.xml
<CustomField>
    <fullName>Account_Mail__c</fullName>
    <label>Account Mail</label>
    <type>Email</type>
</CustomField>