force-app/main/default/objects/Account/fields/Contacted_Date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Date_and_time__c</fullName>
    <label>Contacted Date and time</label>
    <type>DateTime</type>
</CustomField>