force-app/main/default/objects/Account/fields/Contacted_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Percentage__c</fullName>
    <label>Contacted Percentage.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>