force-app/main/default/objects/Account/fields/Description_1__c.field-meta.xml
<CustomField>
    <fullName>Description_1__c</fullName>
    <label>Description 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>