force-app/main/default/objects/Account/fields/Description_2__c.field-meta.xml
<CustomField>
    <fullName>Description_2__c</fullName>
    <label>Description 2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>