force-app/main/default/objects/Account/fields/Description_3__c.field-meta.xml
<CustomField>
    <fullName>Description_3__c</fullName>
    <label>Description 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>