force-app/main/default/objects/Account/fields/FLS_Check_Field__c.field-meta.xml
<CustomField>
    <fullName>FLS_Check_Field__c</fullName>
    <label>FLS Check Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>