force-app/main/default/objects/Account/fields/IP_address_Check_Text_area__c.field-meta.xml
<CustomField>
    <fullName>IP_address_Check_Text_area__c</fullName>
    <label>IP address Check Text area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>