force-app/main/default/objects/Account/fields/Long_text_area__c.field-meta.xml
<CustomField>
    <fullName>Long_text_area__c</fullName>
    <label>Long text area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>