force-app/main/default/objects/Account/fields/Prefered_time_to_reach__c.field-meta.xml
<CustomField>
    <fullName>Prefered_time_to_reach__c</fullName>
    <label>Prefered time to reach</label>
    <type>Time</type>
</CustomField>