force-app/main/default/objects/Account/fields/Response_from_AI__c.field-meta.xml
<CustomField>
    <fullName>Response_from_AI__c</fullName>
    <label>Response from AI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>