force-app/main/default/objects/Account/fields/Rich_Text_area__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_area__c</fullName>
    <label>Rich Text area</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>