force-app/main/default/objects/Account/fields/Target_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Parent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Target Parent Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>