force-app/main/default/objects/Account/fields/test_field__c.field-meta.xml
<CustomField>
    <fullName>test_field__c</fullName>
    <label>test_field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>