force-app/main/default/objects/Account/fields/userformula__c.field-meta.xml
<CustomField>
    <fullName>userformula__c</fullName>
    <formula>$User.FirstName + &apos; &apos; + $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>userformula</label>
    <type>Text</type>
</CustomField>