force-app/main/default/objects/Account/listViews/Mock_Data_Energy_Accounts.listView-meta.xml
<ListView>
    <fullName>Mock_Data_Energy_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>sgupt</value>
    </filters>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/3/2025 12:00 AM</value>
    </filters>
    <label>SG - Mock Data - Energy Accounts</label>
</ListView>